2004-09-15  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Releases): New node.

	* doc/automake.texi (Dependencies): Link to Dependency Tracking
	Evolution.
	(Dependency Tracking Evolution): Link to GNU make, Sources (for
	BUILT_SOURCES), and update the paragraph about the "plan" to
	inline dependency tracking with gcc3.

	* doc/automake.texi (History): New node.
	(Dependency Tracking Evolution): New node, filled with a Texinfo
	version of Tom Tromey's ``Dependency Tracking in Automake''
	document, initially published on the Automake homepage on
	2001-06-29.

2004-09-10  Alexandre Duret-Lutz  <adl@gnu.org>

	* m4/minuso.m4 (AM_PROG_CC_C_O): Make sure AC_PROG_CC is never
	called after this macro.
	* tests/distname.test, tests/subdir5.test, tests/subdir8.test,
	tests/subobj.test, tests/subobj4.test, tests/subobj5.test,
	tests/subobj6.test: Adjust.
	Report from Ralf Wildenhues.

	* lib/Automake/Channels.pm (_print_message): Handle uniq_part with
	arbitrary string.
	* automake.in (lang_c_rewrite): Set uniq_part so that the
	AM_PROG_CC_C_O diagnostic is output only once for subdir objects
	and only once for objects with per-target flags.

	* automake.in (lang_c_rewrite): Print files and locations
	for AM_PROG_CC_C_O errors.
	(handle_single_transform): Pass $var to &$subr so it can
	print locations.

	* lib/compile, lib/elisp-comp, lib/install-sh, lib/ylwrap: Use $ret
	instead of $status which is read-only in Zsh.

2004-09-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
	    Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/compile: Preserve spaces in arguments (for example
	-DPACKAGE_STRING="foo 0.1").
	* tests/compile.test: New file.
	* tests/Makefile.am (TESTS): Add compile.test.

2004-09-07  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_clean): Sort rm commands output for
	mostlyclean-generic, clean-generic, distclean-generic, and
	maintainer-clean-generic.
	Report from Bob Friesenhahn.
