@@ -1,10 +1,17 @@
 Authors of GNU Automake.
 
-David Mackenzie.  First version of most ".am" files.
-Wrote sh version of automake.in.
+David Mackenzie
+  First version of most ".am" files.
+  Wrote sh version of automake.in.
 
-Tom Tromey.  Touched all ".am" files.
-Rewrote automake.in
+Tom Tromey
+  Touched all ".am" files.
+  Rewrote automake.in
 
-Alexandre Oliva.  Some of the user-side dependency tracking system.
-Some more random hacking.
+Alexandre Oliva
+  Some of the user-side dependency tracking system.
+  Some more random hacking.
+
+Alexandre Duret-Lutz
+  Major overhaul of everything.
+  Maintenance since 2002.
