@@ -25,7 +25,8 @@ eval 'case $# in 0) exec @PERL@ -S "$0";; *) exec @PERL@ -S "$0" "$@";; esac'
 # Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
 # 02111-1307, USA.
 
-# Written by Tom Tromey <tromey@redhat.com>.
+# Written by Tom Tromey <tromey@redhat.com>, and
+# Alexandre Duret-Lutz <adl@gnu.org>.
 
 BEGIN
 {
@@ -621,7 +622,8 @@ sub parse_arguments (@)
       elsif ($arglist[0] eq '--version')
 	{
 	  print "aclocal (GNU $PACKAGE) $VERSION\n";
-	  print "Written by Tom Tromey <tromey\@redhat.com>\n\n";
+	  print "Written by Tom Tromey <tromey\@redhat.com>\n";
+	  print "       and Alexandre Duret-Lutz <adl\@gnu.org>\n\n";
 	  print "Copyright (C) 2004 Free Software Foundation, Inc.\n";
 	  print "This is free software; see the source for copying conditions.  There is NO\n";
 	  print "warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.\n";
