@@ -1,3 +1,8 @@
+2004-09-19  Akim Demaille  <akim@epita.fr>
+
+	* AUTHOR, automake.in, aclocal.in: Add Alexandre Duret-Lutz as
+	author.
+
 2004-09-15  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* doc/automake.texi (Releases): New node.
